--- a/gallery.html
+++ b/gallery.html
@@ -85,11 +85,18 @@
      <img src="images/band/9.webp" width="2048" height="1536" alt="Image of Itsy Bitsy standing in the middle of a street in Boise, Idaho. From left to right: Tovi Chance, Lilly Furlow, Brian Dyer, Jack Tiderman, Maz Della Badia. Taken on November 6, 2024.">
     </picture>
     <picture>
-     <source media="(max-width:400px)" srcset="images/band/responsive/12-400w.webp">
-     <source media="(max-width:600px)" srcset="images/band/responsive/12-600w.webp">
-     <source media="(max-width:800px)" srcset="images/band/responsive/12-800w.webp">
-     <source media="(max-width:1000px)" srcset="images/band/responsive/12-1000w.webp">
-     <img src="images/band/12.webp" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle. Clockwise from top: Tovi Chance, Brian Dyer, Maz Della Badia, Jack Tiderman, Lilly Furlow. Taken on November 6, 2024.">
+     <source media="(max-width:400px)" srcset="images/band/responsive/6-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/6-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/6-800w.webp">
+     <img src="images/band/6.webp" width="1000" height="1500" alt="Image of Tovi Chance singing inside of Folks Candle shop in Boise, Idaho on November 10th, 2023. Photo taken by Michael Floyd.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/16-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/16-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/16-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/16-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/16-1200w.webp">
+     <img src="images/band/16.webp" loading="lazy" width="1440" height="1148" alt="Image of Brian Dyer playing drums during Live at the Hive in Boise on January 11th, 2025. Photo taken by Gregg Mizuta.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/4-400w.webp">
@@ -115,18 +122,29 @@
      <img src="images/band/8.webp" loading="lazy" width="1500" height="1000" alt="Image of Tovi Chance, Lilly Furlow, and Maz Della Badia sitting inside Mixed Metaphor Studios.">
     </picture>
     <picture>
-     <source media="(max-width:400px)" srcset="images/band/responsive/6-400w.webp">
-     <source media="(max-width:600px)" srcset="images/band/responsive/6-600w.webp">
-     <source media="(max-width:800px)" srcset="images/band/responsive/6-800w.webp">
-     <img src="images/band/6.webp" width="1000" height="1500" alt="Image of Tovi Chance singing inside of Folks Candle shop in Boise, Idaho on November 10th, 2023. Photo taken by Michael Floyd.">
-    </picture>
-    <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/13-400w.webp">
      <source media="(max-width:600px)" srcset="images/band/responsive/13-600w.webp">
      <source media="(max-width:800px)" srcset="images/band/responsive/13-800w.webp">
      <source media="(max-width:1000px)" srcset="images/band/responsive/13-1000w.webp">
      <source media="(max-width:1200px)" srcset="images/band/responsive/13-1200w.webp">
      <img src="images/band/13.webp" loading="lazy" width="1500" height="1000" alt="Image of Lilly Furlow sitting with a guitar inside of Mixed Metaphor Studios.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/17-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/17-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/17-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/17-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/17-1200w.webp">
+     <img src="images/band/17.webp" loading="lazy" width="1440" height="1148" alt="Image of Maz Della Badia playing an electric guitar during Live at the Hive in Boise on January 11th, 2025. Photo taken by Gregg Mizuta.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/2-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/2-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/2-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/2-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/2-1200w.webp">
+     <source media="(max-width:1600px)" srcset="images/band/responsive/2-1600w.webp">
+     <img src="images/band/2.webp" loading="lazy" width="2144" height="1424" alt="Image of Jack Tiderman playing bass and Lilly Furlow playing guitar in Horseshoe Bend on July 18th, 2023.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/7-400w.webp">
@@ -153,13 +171,35 @@
      <img src="images/band/14.webp" loading="lazy" width="2048" height="1536" alt="Image of Itsy Bitsy playing at Folks candle shop in Boise, Idaho on November 10th, 2023. From left to right: Brian Dyer playing drums, Lilly Furlow playing guitar, Tovi Chance holding a microphone, Jack Tiderman playing bass, and Maz Della Badia playing guitar.">
     </picture>
     <picture>
-     <source media="(max-width:400px)" srcset="images/band/responsive/2-400w.webp">
-     <source media="(max-width:600px)" srcset="images/band/responsive/2-600w.webp">
-     <source media="(max-width:800px)" srcset="images/band/responsive/2-800w.webp">
-     <source media="(max-width:1000px)" srcset="images/band/responsive/2-1000w.webp">
-     <source media="(max-width:1200px)" srcset="images/band/responsive/2-1200w.webp">
-     <source media="(max-width:1600px)" srcset="images/band/responsive/2-1600w.webp">
-     <img src="images/band/2.webp" loading="lazy" width="2144" height="1424" alt="Image of Jack Tiderman playing bass and Lilly Furlow playing guitar in Horseshoe Bend on July 18th, 2023.">
+     <source media="(max-width:400px)" srcset="images/band/responsive/18-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/18-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/18-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/18-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/18-1200w.webp">
+     <img src="images/band/18.webp" loading="lazy" width="1440" height="1148" alt="Image of Tovi Chance behind the microphone during Live at the Hive in Boise on January 11th, 2025. Photo taken by Gregg Mizuta.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/19-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/19-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/19-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/19-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/19-1200w.webp">
+     <img src="images/band/19.webp" loading="lazy" width="1440" height="1148" alt="Image of Jack Tiderman playing bass during Live at the Hive in Boise on January 11th, 2025. Photo taken by Gregg Mizuta.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/12-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/12-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/12-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/12-1000w.webp">
+     <img src="images/band/12.webp" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle. Clockwise from top: Tovi Chance, Brian Dyer, Maz Della Badia, Jack Tiderman, Lilly Furlow. Taken on November 6, 2024.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/15-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/15-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/15-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/15-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/15-1200w.webp">
+     <img src="images/band/15.webp" loading="lazy" width="1440" height="1148" alt="Image of Lilly Furlow playing an electric guitar during Live at the Hive in Boise on January 11th, 2025. Photo taken by Gregg Mizuta.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/1-400w.webp">
