added itsy tf promo poster, updated shows.html

--- a/shows.html
+++ b/shows.html
@@ -46,13 +46,13 @@
   <section style="background-color:#1C1C1C;">
    <div class="container" style="padding-bottom:0;">
     <div class="header">
-     <h1 style="color:white;font-family:sans-serif;font-size:25px;">Next Itsy Bitsy Show: To Be Announced</h1>
+     <h1 style="color:white;font-family:sans-serif;font-size:25px;">Itsy Bitsy at Treefort 2025!</h1>
      <h2 style="color:white;font-family:sans-serif;font-size:16px;"><br>- Date: TBA -</h2>
     </div>
     <div class="poster-container" style="align-self:center;display:inline-block;">
-     <a target="_blank" href="images/showposters/placeholder.webp">
+     <a target="_blank" href="images/showposters/itsytfpromofinal1.png">
      <picture>
-      <img src="images/showposters/placeholder.webp" width="1440" height="1438" alt="Placeholder poster for Itsy Bitsy's "Shows" page.">
+      <img src="images/showposters/itsytfpromofinal1.png" width="1080" height="1920" alt="Poster to announce Itsy Bitsy's upcoming performance at Treefort Music Fest 2025 in Boise, Idaho.">
      </picture>
      </a>
     </div>
