--- a/shows.html
+++ b/shows.html
@@ -43,11 +43,11 @@
     </a>
    </div>
   </div>
-  <section style="background-color:#1C1C1C;">
+  <section style="background-color:#d4bccd;">
    <div class="container" style="padding-bottom:0;">
     <div class="header">
-     <h1 style="color:white;font-family:sans-serif;font-size:25px;">Itsy Bitsy at Treefort 2025!</h1>
-     <h2 style="color:white;font-family:sans-serif;font-size:16px;"><br>- Date: TBA -</h2>
+     <h1 style="color:black;font-family:sans-serif;font-size:25px;">Itsy Bitsy at Treefort 2025!</h1>
+     <h2 style="color:black;font-family:sans-serif;font-size:16px;"><br>- Date: TBA -</h2>
     </div>
     <div class="poster-container" style="align-self:center;display:inline-block;">
      <a target="_blank" href="images/showposters/itsytfpromofinal1.png">
