titles for iframes, updated footer for ep page

--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -126,15 +126,15 @@ Recorded, mixed, and mastered by <b>Jesse Blake Rundle</b> at Mixed Metaphor Rec
    </div>
   </div>
    <div class="players" style="padding:1.5rem 0;border-top:2px solid white;margin:1rem;display:flex;gap:1rem;justify-content:center;" loading="lazy">
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4vV3tI6a1f5DA8lmtCwMie?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+    <iframe title="Spotify Player" style="border-radius:12px" src="https://open.spotify.com/embed/album/4vV3tI6a1f5DA8lmtCwMie?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
     </iframe>
-    <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" style="overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/itsy-bitsy-ep/1786083162">
+    <iframe title="Apple Music Player" allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" style="overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/itsy-bitsy-ep/1786083162">
     </iframe>
     <iframe src="https://www.youtube.com/embed/videoseries?si=RTJOkDScQE-h8P0s&amp;list=OLAK5uy_kmhcpxdYyr23LlGjGjpI1UuYwfc5MIIPU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
     </iframe>
    </div>
   <div class="footer">
-   <p style="color:white;font-size:12px;font-family:Verdana,sans-serif;" class="bottomright">©2025 Itsy Bitsy.</p>
+   <p style="color:white;font-size:12px;font-family:Verdana,sans-serif;">©2025 Itsy Bitsy. Website by Brian Dyer.</p>
   </div>
  </body>
 </html>
