--- a/music.html
+++ b/music.html
@@ -85,7 +85,7 @@
   </div>
   </section>
   <div class="footer">
-   <p style="color:white;font-size:12px;" class="bottomright">©2025 Itsy Bitsy.</p>
+   <p style="color:white;font-family:Verdana,sans-serif;font-size:12px;">©2025 Itsy Bitsy. Website by Brian Dyer.</p>
   </div>
  </body>
 </html>
