--- a/shows.html
+++ b/shows.html
@@ -75,7 +75,7 @@
   </section>
    <div class="container" style="justify-content:center;align-items:center;display:flex;background-color: #000000;">
    <div class="footer">
-    <p style="color:white;font-size:12px;float:right;" class="bottomright">©2025 Itsy Bitsy.</p>
+    <p style="color:white;font-family:Verdana,sans-serif;font-size:12px;float:right;" class="bottomright">©2025 Itsy Bitsy. Website by Brian Dyer.</p>
    </div>
   </div>
  </body>
