--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -121,17 +121,19 @@
 <b>Jack Tiderman</b>: bass guitar<br>
 <b>Brian Dyer</b>: drums<br><br>
 <b>Regan Ybarra</b>: lyrics (track 1)<br>
-Recorded, mixed, and mastered by <b>Jesse Blake Rundle</b> at Mixed Metaphor Recording Studio.</p>
+Recorded, mixed, and mastered by <b>Jesse Blake Rundle</b> at Mixed Metaphor Recording Studio.<br>
+All tracks written by Itsy Bitsy.</p>
    </section>
    </div>
   </div>
-   <div class="players" style="padding:1.5rem 0;border-top:2px solid white;margin:1rem;display:flex;gap:1rem;justify-content:center;" loading="lazy">
-    <iframe title="Spotify Player" style="border-radius:12px" src="https://open.spotify.com/embed/album/4vV3tI6a1f5DA8lmtCwMie?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+   <section>
+   <div class="players" style="padding:1.25rem 0;border-top:2px solid white;margin:1rem;display:flex;gap:1rem;justify-content:center;" loading="lazy">
+    <iframe style="aspect-ratio: 16/9;" src="https://www.youtube.com/embed/videoseries?si=2frg6CR3TE8RWz63&amp;list=OLAK5uy_k4cH2uqcIg_JC4i-0t8sfO045wwh09ixQ" title="Itsy Bitsy - EP YouTube Playlist Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe style="aspect-ratio: 16/9;" loading="lazy" src="https://www.youtube.com/embed/-2FDau1UZQo&autoplay=1" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-2FDau1UZQo?autoplay=1><img src=../images/thumbs/itsybitsythumb3.webp alt='Itsy Bitsy - Dreams as Prey (Live 6/6/2024)'><span>▶</span></a>" frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Itsy Bitsy - Dreams as Prey (Live 6/6/2024)">
     </iframe>
-    <iframe title="Apple Music Player" allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" style="overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/itsy-bitsy-ep/1786083162">
+    <iframe style="aspect-ratio: 16/9;" loading="lazy" src="https://www.youtube.com/embed/dfiknk4vRoQ&autoplay=1" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/dfiknk4vRoQ?autoplay=1><img src=../images/thumbs/itsybitsythumb1.webp alt='Itsy Bitsy - Forget Me Not (Live 3/15/2023)'><span>▶</span></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Itsy Bitsy - Forget Me Not (Live 3/15/2023)">
     </iframe>
-    <iframe src="https://www.youtube.com/embed/videoseries?si=RTJOkDScQE-h8P0s&amp;list=OLAK5uy_kmhcpxdYyr23LlGjGjpI1UuYwfc5MIIPU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+    </section>
    </div>
   <div class="footer">
    <p style="color:white;font-size:12px;font-family:Verdana,sans-serif;">©2025 Itsy Bitsy. Website by Brian Dyer.</p>
