wow that's crazy somehow it's even MORE visually appealing
hell yeah

--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -42,7 +42,7 @@
   <div class="headert">
    <h1><i>Itsy Bitsy</i> (EP)</h1>
   </div>
-  <div class="content-container">
+  <div class="content-container" style="padding-bottom:1rem;border-bottom:2px solid white;">
    <div class="cover">
     <picture>
      <img src="../images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's eponymous debut EP, which released on December 21, 2024. Art by Tovi Chance.">
@@ -51,7 +51,7 @@
    <div class="text">
   <section>
    <h2 style="color:white;font-family:Verdana,sans-serif;padding-bottom:1rem;">Tracklist:</h2>
-   <div class="tracklist" style="padding-bottom:0.5rem;">
+   <div class="tracklist" style="padding-bottom:1rem;">
     <table style="width:100%;">
      <tr>
       <th style="text-align:left;width:85%;display:none;">Track:</th>
@@ -75,13 +75,13 @@
      </tr>
      <tr>
       <td>5. Worm Icon You</td>
-      <td style="text-align:right;">2:07</td>
+      <td style="text-align:right;padding-bottom:0;">2:07</td>
      </tr>
     </table>
    </div>
   </section>
   <section style="padding:1rem 0;border-top:2px solid white;border-bottom:2px solid white;">
-   <h2 style="color:white;font-family:Verdana,sans-serif;padding-top:0.5rem;">Listen:</h2>
+   <h2 style="color:white;font-family:Verdana,sans-serif;">Listen:</h2>
    <div class="listenbar">
     <ul>
      <li style="margin-left:0;">
@@ -113,28 +113,32 @@
    </div>
    </section>
    <section>
-    <h2 style="color:white;font-family:Verdana,sans-serif;padding-top:1.5rem;">Details:</h2>
-    <p style="color:white;font-family:Verdana,sans-serif;"><br>Release Date: December 21, 2024.<br><br>
+    <h2 style="color:white;font-family:Verdana,sans-serif;padding-top:1rem;">Details:</h2>
+    <p style="color:white;font-family:Verdana,sans-serif;font-size:16px;"><br>Release Date: December 21, 2024.<br><br>
 <b>Tovi Chance</b>: lead vocals, lyrics<br>
 <b>Lilly Furlow</b>: guitar, backing vocals (tracks 1-3), lyrics (tracks 1, 3, 5), lead vocals (track 3)<br>
 <b>Maz Della Badia</b>: guitar, synthesizer (track 2), backing vocals (track 4)<br>
 <b>Jack Tiderman</b>: bass guitar<br>
 <b>Brian Dyer</b>: drums<br><br>
-<b>Regan Ybarra</b>: lyrics (track 1)<br>
-Recorded, mixed, and mastered by <b>Jesse Blake Rundle</b> at Mixed Metaphor Recording Studio.<br>
+Regan Ybarra: lyrics (track 1)<br>
+Recorded, mixed, and mastered by Jesse Blake Rundle at Mixed Metaphor Recording Studio.<br><br>
 All tracks written by Itsy Bitsy.</p>
    </section>
    </div>
   </div>
    <section>
-   <div class="players" style="padding:1.25rem 0;border-top:2px solid white;margin:1rem;display:flex;gap:1rem;justify-content:center;" loading="lazy">
-    <iframe style="aspect-ratio: 16/9;" src="https://www.youtube.com/embed/videoseries?si=2frg6CR3TE8RWz63&amp;list=OLAK5uy_k4cH2uqcIg_JC4i-0t8sfO045wwh09ixQ" title="Itsy Bitsy - EP YouTube Playlist Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe style="aspect-ratio: 16/9;" loading="lazy" src="https://www.youtube.com/embed/-2FDau1UZQo&autoplay=1" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-2FDau1UZQo?autoplay=1><img src=../images/thumbs/itsybitsythumb3.webp alt='Itsy Bitsy - Dreams as Prey (Live 6/6/2024)'><span>▶</span></a>" frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Itsy Bitsy - Dreams as Prey (Live 6/6/2024)">
-    </iframe>
-    <iframe style="aspect-ratio: 16/9;" loading="lazy" src="https://www.youtube.com/embed/dfiknk4vRoQ&autoplay=1" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/dfiknk4vRoQ?autoplay=1><img src=../images/thumbs/itsybitsythumb1.webp alt='Itsy Bitsy - Forget Me Not (Live 3/15/2023)'><span>▶</span></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Itsy Bitsy - Forget Me Not (Live 3/15/2023)">
-    </iframe>
+  <div class="headert" style="align-text:center;">
+   <h2 style="color:white;font-family:Verdana,sans-serif;">Music Videos:</h2>
+  </div>
+   <div class="content-container" loading="lazy">
+    <div class="videos">
+     <iframe style="aspect-ratio: 16/9;" loading="lazy" src="https://www.youtube.com/embed/-2FDau1UZQo&autoplay=1" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-2FDau1UZQo?autoplay=1><img src=../images/thumbs/itsybitsythumb3.webp alt='Itsy Bitsy - Dreams as Prey (Live 6/6/2024)'><span>▶</span></a>" frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Itsy Bitsy - Dreams as Prey (Live 6/6/2024)">
+     </iframe>
+     <iframe style="aspect-ratio: 16/9;" loading="lazy" src="https://www.youtube.com/embed/dfiknk4vRoQ&autoplay=1" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/dfiknk4vRoQ?autoplay=1><img src=../images/thumbs/itsybitsythumb1.webp alt='Itsy Bitsy - Forget Me Not (Live 3/15/2023)'><span>▶</span></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="Itsy Bitsy - Forget Me Not (Live 3/15/2023)">
+     </iframe>
+     </div>
+    </div>
     </section>
-   </div>
   <div class="footer">
    <p style="color:white;font-size:12px;font-family:Verdana,sans-serif;">©2025 Itsy Bitsy. Website by Brian Dyer.</p>
   </div>
