--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -50,8 +50,8 @@
    </div>
    <div class="text">
   <section>
-   <h2 style="color:white;font-family:Verdana,sans-serif;padding-bottom:1rem;">Tracklist:</h2>
-   <div class="tracklist" style="padding-bottom:1rem;">
+   <h2 style="color:white;font-family:Verdana,sans-serif;">Tracklist:</h2>
+   <div class="tracklist" style="padding: 1rem 0;">
     <table style="width:100%;">
      <tr>
       <th style="text-align:left;width:85%;display:none;">Track:</th>
@@ -74,7 +74,7 @@
       <td style="text-align:right;">4:21</th>
      </tr>
      <tr>
-      <td>5. Worm Icon You</td>
+      <td style="padding-bottom:0;">5. Worm Icon You</td>
       <td style="text-align:right;padding-bottom:0;">2:07</td>
      </tr>
     </table>
@@ -114,7 +114,7 @@
    </section>
    <section>
     <h2 style="color:white;font-family:Verdana,sans-serif;padding-top:1rem;">Details:</h2>
-    <p style="color:white;font-family:Verdana,sans-serif;font-size:16px;"><br>Release Date: December 21, 2024.<br><br>
+    <p class="detailst" style="color:white;font-family:Verdana,sans-serif;">Release Date: December 21, 2024.<br><br>
 <b>Tovi Chance</b>: lead vocals, lyrics<br>
 <b>Lilly Furlow</b>: guitar, backing vocals (tracks 1-3), lyrics (tracks 1, 3, 5), lead vocals (track 3)<br>
 <b>Maz Della Badia</b>: guitar, synthesizer (track 2), backing vocals (track 4)<br>
