fine, both the img AND the picture

--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -45,7 +45,7 @@
   <div class="content-container" style="padding-bottom:1rem;border-bottom:2px solid white;">
    <div class="cover">
     <picture width="3744" height="3744">
-     <img src="../images/covers/ep.webp" alt="The cover art for Itsy Bitsy's eponymous debut EP, which released on December 21, 2024. Art by Tovi Chance.">
+     <img src="../images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's eponymous debut EP, which released on December 21, 2024. Art by Tovi Chance.">
     </picture>
    </div>
    <div class="text">
