--- a/music.html
+++ b/music.html
@@ -70,19 +70,19 @@
   }
  </script>
   <section id="ep">
-  <div class="container" style="padding-bottom:30vh;">
-   <div class="header">
-    <h1 style="color:white;font-family:sans-serif;">EPs</h1>
-   </div>
-   <div class="image-container">
-    <a href="music/itsybitsyep" style="text-decoration:none;">
-    <picture>
-     <img src="images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's self-titled debut EP, which released on December 21, 2024. Art by Tovi Chance.">
-    </picture>
-    <h2 style="color:white;font-family:sans-serif;display:inline;"><i>Itsy Bitsy</i> (EP)</h2>
-   </a>
-   </div>
-  </div>
+    <div class="header">
+      <h1 style="color:white;font-family:sans-serif;">EPs</h1>
+     </div>
+     <div class="container" style="padding-bottom:30vh;columns:15rem 3;gap:1rem;">
+      <div class="release-container">
+        <a href="music/itsybitsyep" style="text-decoration:none;">
+          <picture>
+            <img src="images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's self-titled debut EP, which released on December 21, 2024. Art by Tovi Chance.">
+          </picture>
+          <h2 style="color:white;font-family:sans-serif;display:block;"><i>Itsy Bitsy</i> (EP)</h2>
+        </a>
+      </div>
+    </div>
   </section>
   <div class="footer">
    <p style="color:white;font-family:Verdana,sans-serif;font-size:12px;">©2025 Itsy Bitsy. Website by Brian Dyer.</p>
