Fix PT. 2 - image shit in html

--- a/music.html
+++ b/music.html
@@ -77,7 +77,7 @@
       <div class="release-container">
         <a href="music/itsybitsyep" style="text-decoration:none;">
           <picture>
-            <img src="images/covers/ep.webp" width="3744" height="3744" alt="The cover art for Itsy Bitsy's self-titled debut EP, which released on December 21, 2024. Art by Tovi Chance.">
+            <img src="images/covers/ep.webp" width="3744" height="3744" style="width:100%;height:auto;" alt="The cover art for Itsy Bitsy's self-titled debut EP, which released on December 21, 2024. Art by Tovi Chance.">
           </picture>
           <h2 style="color:white;font-family:sans-serif;display:block;"><i>Itsy Bitsy</i> (EP)</h2>
         </a>
