--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -10,7 +10,8 @@
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, Itsy Bitsy EP, EP, Forget Me Not, Sundance Kid, Heavy, Dreams As Prey, Worm Icon You, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
-  
+  <meta name="theme-color" content="currentColor" media="(prefers-color-scheme:dark)">  
+
   <meta property="og:url" content="https://itsybitsyband.com/music/itsybitsyep">
   <meta property="og:type" content="website">
   <meta property="og:image" content="../images/covers/ep.webp">
