Trying a theme-color for gallery

--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
   <link rel="canonical" href="https://itsybitsyband.com/gallery">
   <meta name="description" content="The official website for pictures, posters, and videos of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="gallery.css">
+  <meta name="theme-color" content="#000000">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, itsy bitsy photos, pictures, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
