theme-color for music page

--- a/music.html
+++ b/music.html
@@ -6,6 +6,7 @@
   <link rel="canonical" href="https://itsybitsyband.com/music">
   <meta name="description" content="The official website for the music of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="music.css">
+  <meta name="theme-color" content="#000000">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, itsy bitsy music, songs, Itsy Bitsy music, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +32,6 @@
   <link rel="manifest" href="images/fstuff/site.webmanifest">
   <link rel="mask-icon" href="images/fstuff/safari-pinned-tab.svg" color="#e00971">
   <meta name="msapplication-TileColor" content="#ff0000">
-  <meta name="theme-color" content="#ffffff">
  </head>
  <body>
   <div class="container" id="navbar" style="background-color:#000000;padding:0.3rem;">
