--- a/shows.html
+++ b/shows.html
@@ -6,6 +6,7 @@
   <link rel="canonical" href="https://itsybitsyband.com/shows">
   <meta name="description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="shows.css">
+  <meta name="theme-color" comtent="#000000">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +32,6 @@
   <link rel="manifest" href="images/fstuff/site.webmanifest">
   <link rel="mask-icon" href="images/fstuff/safari-pinned-tab.svg" color="#e00971">
   <meta name="msapplication-TileColor" content="#ff0000">
-  <meta name="theme-color" content="#ffffff">
  </head>
  <body>
   <div class="container" style="background-color:#000000;position:sticky;top:0;padding:0.3rem;>
