theme-color for EP page

--- a/music/itsybitsyep.html
+++ b/music/itsybitsyep.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, Itsy Bitsy EP, EP, Forget Me Not, Sundance Kid, Heavy, Dreams As Prey, Worm Icon You, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
-  <meta name="theme-color" content="currentColor" media="(prefers-color-scheme:dark)">  
+  <meta name="theme-color" content="#000000">  
 
   <meta property="og:url" content="https://itsybitsyband.com/music/itsybitsyep">
   <meta property="og:type" content="website">
@@ -32,7 +32,6 @@
   <link rel="manifest" href="../images/fstuff/site.webmanifest">
   <link rel="mask-icon" href="../images/fstuff/safari-pinned-tab.svg" color="#e00971">
   <meta name="msapplication-TileColor" content="#ff0000">
-  <meta name="theme-color" content="#ffffff">
  </head>
  <body>
   <div class="header">
