actually we don't need tooo many border-radius changes
- also fixed menubar issues on shows.html
- also fixed typo in shows.html

--- a/shows.html
+++ b/shows.html
@@ -6,7 +6,7 @@
   <link rel="canonical" href="https://itsybitsyband.com/shows">
   <meta name="description" content="See details about Itsy Bitsy's upcoming shows! The official website of Boise’s own dream-pop, post-punk, and noise-rock band Itsy Bitsy.">
   <link rel="stylesheet" href="shows.css">
-  <meta name="theme-color" comtent="#000000">
+  <meta name="theme-color" content="#000000">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, band, rock, alternative, dream pop, noise rock, shoegaze, Boise">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,8 +34,8 @@
   <meta name="msapplication-TileColor" content="#ff0000">
  </head>
  <body>
-  <div class="container" style="background-color:#000000;position:sticky;top:0;padding:0.3rem;>
-  <div class="container">
+  <div class="container" style="background-color:#000000;position:sticky;top:0;padding:0.3rem;">
+  <div class="menubar">
     <a href="./" aria-label="The home page of Itsy Bitsy's website" target="_self" style="text-decoration:none;">
      <button class="men" aria-label="Click to return to the main page">
       <p style="color:black;font-size:24px;" class="buttonp"><b>HOME</b></p>
