ugh this navbar is frustrating af
- got the hamburger menu to be the same height as the actual text font-size, at least

--- a/gallery.html
+++ b/gallery.html
@@ -45,8 +45,8 @@
      </a>
     </div>
     <div class="seclinks">
-     <a href="javascript:void(0);" id="ham" style="float:right;margin:1rem;"onclick="myFunction()">
-      <img src="images/hamburg.svg" alt="Mobile menu icon" aria-label="Click to browse Itsy Bitsy's Gallery by photos, posters, or videos." width="25" height="25">
+     <a href="javascript:void(0);" id="ham" style="float:right;"onclick="myFunction()">
+      <img src="images/hamburg.svg" alt="Mobile menu icon" aria-label="Click to browse Itsy Bitsy's Gallery by photos, posters, or videos." width="24" height="24">
      </a>
      <div class="seclinksb" id="link">
       <a href="#photos"><b>PHOTOS</b></a>
@@ -65,7 +65,7 @@
      y.style.display = "inline-block";
    } else {
      x.style.display = "inline-block";
-     x.style.margin = "0.5rem";
+     x.style.margin = "0 0.5rem";
      y.style.display = "none";
    }
   }
